[package]
name = "prhub-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[lib]
name = "prhub"
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steel-core = { version = "0.7.0", features = ["dylibs", "sync"] }
steel-derive = { version = "0.6.0" }
unicode-width = "0.2.2"
log = "0.4"
simple-log = "2.4.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
